<package>

  <name>lslidar_ch64w</name>
  <version>1.0.0</version>
  <description>
    Basic ROS support for the Leishen Ch LIDARs.
  </description>
  <maintainer email="zufanglei@lslidar.com">leo</maintainer>
  <author>leo</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lslidar_ch64w_driver</run_depend>
  <run_depend>lslidar_ch64w_msgs</run_depend>
  <run_depend>lslidar_ch64w_decoder</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
